make the forum list item thing have a margin-right to prevent arrow overlap.

--- a/src/main/resources/scss/forums/components/_forums.scss
+++ b/src/main/resources/scss/forums/components/_forums.scss
@@ -207,6 +207,11 @@ a.blockLink {
 				padding:0;
 				border:1px solid transparent;
 				border-bottom-color: $panel-border-color;
+
+				.wrap {
+					margin-right: 20px;
+				}
+
 				.attribution {
 					font-size: .75rem;
 					line-height: 1rem;
